--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       font-family: sans-serif;
       margin: 40px;
-      max-width: 500px;
+      max-width: 100%;
     }
     input, textarea, button {
       width: 100%;
